# adbc-poolhouse

./: .cliff.toml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOP.md  README.md  ROADMAP.md  diag_virtual_clock.py  justfile  mkdocs.yml  pyproject.toml  skills-lock.json
.claude/: settings.json
.doc-writer/: .gitignore  config.yaml  context.md
.github/workflows/: ci.yml  docs.yml  pr.yml  release.yml
.opencode/: gsd-file-manifest.json  opencode.json
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: dbapi-module-connect-kwargs.md  pool-lifecycle-guide-issues.md
.planning/milestones/: v0.1-MILESTONE-AUDIT.md  v1.0.0-REQUIREMENTS.md  v1.0.0-ROADMAP.md  v1.2.0-MILESTONE-AUDIT.md  v1.2.0-REQUIREMENTS.md  v1.2.0-ROADMAP.md  v1.3.0-REQUIREMENTS.md  v1.4.0-MILESTONE-AUDIT.md  v1.4.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  ASYNC-EDGE-CASES.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/roadmap/: README.md  v1.2.0-ROADMAP.md
.reviews/: review-2026-06-28.md
_notes/: design-discussion.md
benchmarks/: README.md  __init__.py  _harness.py  gil_release.py
docs/scripts/: gen_ref_pages.py
docs/src/: changelog.md  index.md
src/adbc_poolhouse/: __init__.py  _base_config.py  _bigquery_config.py  _bigquery_translator.py  _clickhouse_config.py  _clickhouse_translator.py  _databricks_config.py  _databricks_translator.py  _driver_api.py  _drivers.py  _duckdb_config.py  _duckdb_translator.py  _exceptions.py  _flightsql_config.py  _flightsql_translator.py  _mssql_config.py  _mssql_translator.py  _mysql_config.py  _mysql_translator.py  _pool_factory.py  _pool_types.py  _postgresql_config.py  _postgresql_translator.py  _registry.py  (+12 more)
tests/: conftest.py  test_adbc_poolhouse.py  test_async_guard.py  test_base_config.py  test_benchmarks_harness.py  test_configs.py  test_driver_api.py  test_driver_imports.py  test_drivers.py  test_offload_typing.py  test_pkg_extra.py  test_pkg_import_guard.py  test_pool_factory.py  test_registry.py  test_translators.py
(+464 files in other folders)
